<resources>
    <string name="app_name">eco-recycle-app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alcibar Vasquez</string>
    <string name="nav_header_subtitle">alcibar@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_user_profile">Mi Perfil</string>
    <string name="menu_campaign">Campañas</string>
    <string name="menu_bonus">Bonus</string>
    <string name="menu_setting">Configuración</string>
    <string name="sign_out">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"Bienvenido! "</string>
    <string name="invalid_username">Usuario inválido</string>
    <string name="invalid_password">Mínimo 6 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>