<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_user_profile" />
        <item
            android:id="@+id/nav_campaign"
            android:icon="@drawable/ic_menu_campaign"
            android:title="@string/menu_campaign" />
        <item
            android:id="@+id/nav_bonus"
            android:icon="@drawable/ic_menu_bonus"
            android:title="@string/menu_bonus" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>