<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.eco_recycle_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user_profile"
        android:name="com.example.eco_recycle_app.ui.profile.UserProfileFragment"
        android:label="@string/menu_bonus"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_campaign"
        android:name="com.example.eco_recycle_app.ui.campaign.CampaignFragment"
        android:label="@string/menu_campaign"
        tools:layout="@layout/fragment_campaign" />

    <fragment
        android:id="@+id/nav_bonus"
        android:name="com.example.eco_recycle_app.ui.bonus.BonusFragment"
        android:label="@string/menu_bonus"
        tools:layout="@layout/fragment_bonus" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.eco_recycle_app.ui.settings.SettingFragment"
        android:label="@string/menu_bonus"
        tools:layout="@layout/fragment_setting" />
</navigation>